--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,9 @@ services:
     container_name: my_mysql_container
     environment:
       MYSQL_ROOT_PASSWORD: 123321 # 设置root密码
-#      MYSQL_DATABASE: my_app_db          # （可选）容器启动时自动创建的数据库
-#      MYSQL_USER: app_user              # （可选）自动创建的新用户
-#      MYSQL_PASSWORD: app_user_password  # （可选）新用户的密码
+      MYSQL_DATABASE: manager
     ports:
-      - "3306:3306"
+      - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql        # 挂载数据卷，实现数据持久化！
     restart: unless-stopped              # 容器意外退出时自动重启
