--- a/src/main/resources/application-byt.yml
+++ b/src/main/resources/application-byt.yml
@@ -11,9 +11,13 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/manager
+    url: jdbc:mysql://127.0.0.1:3307/manager
     username: root
     password: '123321'
+  sql:
+    init:
+      mode: never
+      schema-locations: classpath:db/schema.sql
   jpa:
     hibernate:
       ddl-auto: update
