--- a/src/main/resources/application-byt.yml
+++ b/src/main/resources/application-byt.yml
@@ -11,7 +11,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://8.130.88.98:3306/manager
+    url: jdbc:mysql://8.130.88.98:3306/manager?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8
     username: manager
     password: '123321'
 
