--- a/pom.xml
+++ b/pom.xml
@@ -137,17 +137,13 @@
             <artifactId>volcengine-java-sdk-ark-runtime</artifactId>
             <version>0.2.20</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.ai</groupId>
-            <artifactId>spring-ai-bom</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
+        <!-- Spring AI 依赖已在 dependencyManagement 中配置 -->
+        <!--
         <dependency>
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-starter-mcp-server-webmvc</artifactId>
         </dependency>
+        -->
     </dependencies>
 
     <build>
